refactor: migrate from sqlite to postgresql for vercel support

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/salon_takip
-PORT=5001
+DATABASE_URL=postgresql://neondb_owner:npg_5AVmJct4fIoL@ep-wispy-smoke-ahx70d8z-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
