--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.16.0",
     "@types/react-big-calendar": "^1.16.3",
     "better-sqlite3": "^12.5.0",
     "class-variance-authority": "^0.7.1",
