--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "api/index.ts",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
+            "source": "/api/(.*)",
+            "destination": "/api/index"
+        },
         {
-            "src": "/(.*)",
-            "dest": "api/index.ts"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
