--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/index"
+            "destination": "/api"
         },
         {
             "source": "/(.*)",
